gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag15340.d
version https://git-lfs.github.com/spec/v1
oid sha256:81801216fd3dbf7fd917ddb71a6d2d468e9674a8961d979d3583c6e88923a443
size 224
